2009-07-14  Nick Clifton  <nickc@redhat.com>

	PR 10380
	* README: Document use of LDFLAGS="--static".

2009-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerated.

2009-07-10  Tom Tromey  <tromey@redhat.com>

	* Makefile.am (dwarf.o): Refer to dwarf2.h, not elf/dwarf2.h.
	* Makefile.in: Rebuild.
	* dwarf.c: Include dwarf2.h, not elf/dwarf2.h.

2009-07-06  Tristan Gingold  <gingold@adacore.com>

	* objdump.c (dump_dwarf_section): Handle .eh_frame like other dwarf
	sections.
	* dwarf.h (struct dwarf_section_display): Remove eh_frame field.
	* dwarf.c (debug_displays): Adjust for removed field.

2009-07-03  Jakub Jelinek  <jakub@redhat.com>

	* dwarf.c (decode_location_expression): Handle DW_OP_stack_value
	and DW_OP_implicit_value.

2009-07-01  Nick Clifton  <nickc@redhat.com>

	PR 6714
	* rclex.c (handle_quotes): Do not complain about whitespace
	separating quoted strings.
	(rclex_string): Ignore whitespace when looking for a new opening
	quote following a closing quote.

2009-06-27  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/10321
	* bucomm.c (get_file_size): Return -1 on error.

	* objcopy.c (copy_file): Report empty file.

2009-06-23  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (display_debug_lines_raw): Include the name of the
	section in warning message.
	(struct debug_display): Enable reloc processing for .debug_line
	and .debug_ranges sections.

	* readelf.c: Add --relocated-dump command line option to dump the
	relocated contents of a specified section.
	(request_dump): New function.
	(parse_args): Use it.
	(dump_section_as_bytes): Add parameter to indicate whether the
	contents should be relocated.
	(target_specific_reloc_handling): Add code for a R_MN10300_16
	reloc found after a R_MN10300_SYM_DIFF reloc.
	(debug_apply_relocations): Rename to apply_relocations.
	(get_section_contents): New function.  Replaces common code found
	in dump_section_as_strings and dump_section_as_bytes.